Add link for SangeetFlow Project1.

--- a/home.html
+++ b/home.html
@@ -317,7 +317,7 @@
                         <div class="project-bullet-point"></div>
                         <div class="project-laptop-container-1">
                             <div class="project-label">
-                                <a href="https://color-guessing-gamewebapp.netlify.app/" target="_blank"><img
+                                <a href="https://sangeetflow-webapp.netlify.app/" target="_blank"><img
                                         src="images/project_1.png" alt=""></a>
                             </div>
                         </div>
