Update some functionality of dark-mode try to optemize the code.

--- a/home.html
+++ b/home.html
@@ -181,7 +181,7 @@
                             <div class="skills-container">
                                 <strong class="progress-title" style="display: flex;">React</strong>
                                 <div class="pro-container">
-                                    <span class="prog-title">60%</span>
+                                    <span class="prog-title">40%</span>
                                     <progress class="progress-bar-react" max="100" min="0" value="0"></progress>
                                 </div>
                             </div>
@@ -196,9 +196,9 @@
                         <div class="col-sm-6">
                             <h2 class="langauage-title-text">Additional Skills</h2>
                             <div class="skills-container">
-                                <strong class="progress-title" style="display: flex;">Node.js</strong>
+                                <strong class="progress-title" style="display: flex;">Sleave</strong>
                                 <div class="pro-container">
-                                    <span class="prog-title">60%</span>
+                                    <span class="prog-title">80%</span>
                                     <progress class="progress-bar-node" max="100" min="0" value="0"></progress>
                                 </div>
 
@@ -366,7 +366,8 @@
                         <div class="project-horizontal-line"></div>
                         <div class="project-bullet-point"></div>
                         <div class="project-laptop-container-3">
-                            <div class="project-label"><img src="images/project_3.png" alt=""></div>
+                            <div class="project-label"><a href="https://tictactoe-game-web-app.netlify.app/"
+                                    target="_blank"><img src="images/project_3.png" alt=""></a></div>
                         </div>
 
 
